--- a/css/Style.css
+++ b/css/Style.css
@@ -17,15 +17,15 @@ body {
 	display:flex;
 	flex-direction:column;
 }
-
+/*media*/
 .navbar{
-	margin: 0 240px;
+	margin: 0 auto;
 	width:960px;
 }
 
 
 
-/* @media screen and (min-width: 768px) */
+
 header {
 	height:80px;
 	background-color:#ffffff;
@@ -33,7 +33,7 @@ header {
 	border-bottom: 2px solid #cccccc;
 }
 
-
+/*media*/
 #profilename {
 	background-color:#4aaaa5;
 	border-color:#cccccc;
@@ -51,13 +51,13 @@ li {
 	float:right;	
 	
 }
-
+/*media*/
 #portfolioli {
 	margin-right: 10px;
 	margin-top: 20px;
 	
 }
-
+/*media*/
 #contactli {
 	margin-right: 10px;
 	margin-top: 20px;
@@ -65,6 +65,7 @@ li {
 	padding-left:10px;
 
 }
+/*media*/
 #aboutli {
 	margin-right: 10px;
 	margin-top: 20px;
@@ -91,22 +92,23 @@ a:hover {
 	flex: 1 0 auto;
 
 }
-
+/*media*/
 .bcontent {
-	Margin: 0 240px;
+	Margin: 0 auto;
 	width:960px;
 }
-
+/*media*/
 article {
 
 	background-color:white;
-	/* height: auto; */
-	width: 650px;
+	
+	width: 640px;
 	float: left;
 	margin-top:30px;
    
 	
 }
+/*media*/
 .aboutme {
 	/* margin: 0 30px; */
 	border: 1px solid #cccccc;
@@ -129,6 +131,7 @@ h3 {
     /* font-family: 'Arial','Helvetica Neue', Helvetica, sans-serif; */
 
 }
+/*media*/
 .luhanpic {
 	width:40%;
 	float:left;
@@ -165,7 +168,7 @@ aside {
 }
 
 /* Below are css for photo gallery page */
-
+/*media*/
 div.gallery {
 	position: relative;
 	z-index:2;
@@ -276,13 +279,151 @@ background-color:#4aaaa5;
 }
 
 @media handheld, screen and (max-width: 639px) {
+	.navbar{
+		margin: 0 auto;
+		width:560px;
+	}
+	.bcontent {
+		Margin: 0 auto;
+		width:560px;
+	}
+	.aboutme {
+		/* margin: 0 30px; */
+		border: 1px solid #cccccc;
+		padding: 15px 20px;
+		font-size: 16px;
+		overflow:auto;
+		height:auto;	
+	}
 
+	div.gallery {
+		position: relative;
+		z-index:2;
+		margin: 5px auto;
+		overflow-y: auto;
+		float: left;
+		
+	}
+	div.gallery img {
+	
+		width: 300px;
+		height: auto;
+	}
+
+div.desc {
+	position: absolute;
+	z-index:1;
+    width:320px;
+	text-align: center;
+	padding-top: 8px;
+	left:-10px;
+	top:140px;        /*changed description position since images are larger*/
+	height:35px;
+	color:white;
+	font-weight:bold;
+	background-color:#4aaaa5;
+	
+
+}
+
+	article {
+		background-color:white;	
+		width: 560px;
+		float: left;
+		margin-top:30px;	
+	}
+    aside {
+	    float:left;
+     	background-color:white;
+    	height:auto;
+    	width: 270px;	
+    	margin-top:30px;
+}
 }
 
 @media only screen and (min-width: 640px) and (max-width: 989px) {
 
+	.navbar{
+		margin: 0 auto;
+		width:600px;
+	}
+	.bcontent {
+		Margin: 0 auto;
+		width:600px;
+	}
+	.aboutme {
+		/* margin: 0 30px; */
+		border: 1px solid #cccccc;
+		padding: 20px 25px;
+		font-size: 18px;
+		overflow:auto;
+		height:auto;	
+	}
+	div.gallery img {
+	
+		width: 230px;
+		height: auto;
+	}
+
+    div.desc {
+	position: absolute;
+	z-index:1;
+    width:250px;
+	text-align: center;
+	padding-top: 8px;
+	left:-10px;
+	top:120px;
+	height:35px;
+	color:white;
+	font-weight:bold;
+	background-color:#4aaaa5;
+	
+
+    } 
+
+	article {
+		background-color:white;	
+		width: 600px;
+		float: left;
+		margin-top:30px;	
+	}
+    aside {
+	    float:left;
+     	background-color:white;
+    	height:auto;
+    	width: 270px;	
+    	margin-top:30px;
+    }
 }
 
 @media only screen and (min-width: 980px) {
-
+	.navbar{
+		margin: 0 auto;
+		width:960px;
+	}
+	.bcontent {
+		Margin: 0 auto;
+		width:960px;
+	}
+	.aboutme {
+		/* margin: 0 30px; */
+		border: 1px solid #cccccc;
+		padding: 20px 30px;
+		font-size: 20px;
+		overflow:auto;
+		height:auto;	
+	}
+	article {
+		background-color:white;	
+		width: 660px;
+		float: left;
+		margin-top:30px;	
+	}
+    aside {
+	    float:right;
+     	background-color:white;
+    	height:auto;
+    	width: 270px;	
+    	margin-top:30px;
+    }
 }
